.travis.yml commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ perl:
 before_install:
 - cpanm Carton
 - cpanm Mojolicious
-
+install:
+- cpanm --installdeps --notest . || cat ~/.cpanm/build.log
+after_failure: 
+- cat ~/.cpanm/build.log
